--- a/vault/values.yaml
+++ b/vault/values.yaml
@@ -911,7 +911,7 @@ ui:
   publishNotReadyAddresses: true
   # The service should only contain selectors for active Vault pod
   activeVaultPodOnly: false
-  serviceType: "ClusterIP"
+  serviceType: "LoadBalancer"
   serviceNodePort: null
   externalPort: 8200
   targetPort: 8200
